revised list comprehension lab

--- a/module-1/List-Comprehension/your-code/main.ipynb
+++ b/module-1/List-Comprehension/your-code/main.ipynb
@@ -252,7 +252,7 @@
     "path = cpath.replace('your-code','data')\n",
     "print(path)\n",
     "list_datacsv = [file for file in os.listdir(path) if file.endswith('.csv') ]\n",
-    "list_datacsv"
+    "print(list_datacsv)"
    ]
   },
   {
