Dicts-Sets-Tuples lab working ver.

--- a/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
+++ b/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
@@ -309,25 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a in list letters appeared in tup3  1  times.\n",
-      "b in list letters appeared in tup3  0  times.\n",
-      "c in list letters appeared in tup3  1  times.\n",
-      "d in list letters appeared in tup3  0  times.\n",
-      "e in list letters appeared in tup3  0  times.\n"
+      "a in list letters appeared in tup3  1  time(s).\n",
+      "b in list letters appeared in tup3  0  time(s).\n",
+      "c in list letters appeared in tup3  1  time(s).\n",
+      "d in list letters appeared in tup3  0  time(s).\n",
+      "e in list letters appeared in tup3  0  time(s).\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
     "for l in letters:\n",
-    "    print( l, 'in list letters appeared in tup3 ', tup3.count(l), ' times.')\n",
+    "    print( l, 'in list letters appeared in tup3 ', tup3.count(l), ' time(s).')\n",
     "    "
    ]
   }
